fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -183,8 +183,8 @@
        margin-left: 22%;
        margin-top:  -5%;
        background: white;
-       width: 55%;
-       height: 1025px;
+       width: 59%;
+       height: 1035px;
        border-radius: 25px;
    }
 
@@ -288,7 +288,7 @@
    #contact_wrapper {
        margin-top:  -5%;
        background: white;
-       width: 55%;
+       width: 59%;
        height: 450px;
        margin-left: 22%;
        border-radius: 25px;
@@ -753,8 +753,8 @@ margin-left: -18%;
 #all_rows {
   margin-top: -5%;
   background-color: white;
-  width: 55%;
-  height: 2750px;
+  width: 59%;
+  height: 2770px;
   margin-left: 22%;
   border-radius: 25px;
 
